working on various techs like kubernetes etc